@@ -81,6 +81,8 @@ Bug fixes
     long, instead of cryptic ArrayIndexOutOfBoundsException.  (Karl
     Wettin via Mike McCandless)
 
+13 LUCENE-991: The explain() method of BoostingTermQuery had errors when no payloads were present on a document.  (Peter Keegan via Grant Ingersoll)
+
 New features
 
  1. LUCENE-906: Elision filter for French.
